--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Loading...</title>
+    <title>Gmail</title>
     <link rel="stylesheet" href="style.css" type="text/stylesheet" />
   </head>
   <body>
+    <!-- later we can add multiple webviews in a tabbed interface, much like mailplane...
+  and I dont feel bad about re-creating mailplane because of how unresponsive their devs are
+  to implementing community requests, years and years of the same popular requests...  -->
     <webview id="gmail" src="https://mail.google.com" preload="src/injection/index.js"></webview>
     <script src="src/embedder/index.js" type="text/javascript" charset="utf-8"></script>
   </body>
