make it modular as fuck

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Gmail</title>
+    <title>Modmail</title>
     <link rel="stylesheet" href="style.css" type="text/stylesheet" />
   </head>
   <body>
