basically done with tabs

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="style.css" type="text/stylesheet" />
   </head>
   <body>
+    <div class="tabs"></div>
+    <div class="webviews"></div>
     <script src="src/core/embedder/index.js" type="text/javascript" charset="utf-8"></script>
   </body>
 </html>
