no config? show a basic guide for now

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <body>
     <div class="tabs"></div>
     <div class="webviews"></div>
+    <div style="display:none" id="new-user">
+      <p>
+      Welcome, to get started, configure Modmail by editing <em id="config-path"></em> per the <a target="_blank" href="https://github.com/kfatehi/modmail#config">README</a> and then restart Modmail.
+      </p>
+    </div>
     <script src="src/core/embedder/index.js" type="text/javascript" charset="utf-8"></script>
   </body>
 </html>
