use yarn, make it work with latest electron

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Modmail</title>
-    <link rel="stylesheet" href="style.css" type="text/stylesheet" />
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
     <div class="tabs"></div>
