--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <div class="webviews"></div>
     <div style="display:none" id="new-user">
       <p>
-      Welcome, to get started, configure Modmail by editing <em id="config-path"></em> per the <a target="_blank" href="https://github.com/kfatehi/modmail#config">README</a> and then restart Modmail.
+      Welcome, to get started, configure Modmail by editing <b id="config-path"></b> per the README (see below) and then restart Modmail.
       </p>
+      <div id="readme"></div>
     </div>
     <script src="src/core/embedder/index.js" type="text/javascript" charset="utf-8"></script>
   </body>
